# ViewTouchQt

./: CMakeLists.txt  LICENSE  README.md
Scripts/: install-and-build.sh  run-host.sh
data/: default_layout.json
docs/: Changelog.md  RemoteDisplay.md
src/client/: ButtonItem.cpp  ButtonItem.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PosClient.cpp  PosClient.h  main.cpp
src/client/displays/: DisplayConfig.h  DisplayManager.cpp  DisplayManager.h
src/client/editor/: EditorOverlay.cpp  EditorOverlay.h  GhostItem.cpp  GhostItem.h  LayoutSerializer.cpp  LayoutSerializer.h  PageManagerDialog.cpp  PageManagerDialog.h  PageTabBar.cpp  PageTabBar.h  PropertyDialog.cpp  PropertyDialog.h
src/client/layout/: ActionButtonElement.cpp  ActionButtonElement.h  ButtonElement.cpp  ButtonElement.h  InfoLabelElement.cpp  InfoLabelElement.h  KeyboardButton.cpp  KeyboardButton.h  KeypadButtonElement.cpp  KeypadButtonElement.h  LabelElement.cpp  LabelElement.h  LayoutEngine.cpp  LayoutEngine.h  LoginEntryField.cpp  LoginEntryField.h  PageWidget.cpp  PageWidget.h  PanelElement.cpp  PanelElement.h  PinEntryElement.cpp  PinEntryElement.h  UiElement.cpp  UiElement.h
src/client/printing/: CupsPrinter.cpp  CupsPrinter.h
src/common/: CMakeLists.txt  Protocol.cpp  Protocol.h  Version.h.in
src/host/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  PosServer.cpp  PosServer.h  main.cpp
